# alfred-universal-bookmarks

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README_zh-CN.md  build.rs  info.plist  justfile  updater.sh
.github/workflows/: release.yml
src/: cache.rs  deleter.rs  extractor.rs  main.rs  pinyin.rs  types.rs  updater.rs
