[package]
name = "alfred-universal-bookmarks"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ub"
path = "src/main.rs"

[dependencies]
alfred = "4.0.2"
plist = "1.8.0"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
pinyin = { version = "0.11", default-features = false, features = ["plain"] }
serde_json = "1.0.149"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
